Refactored code and added routes,controllers and services
